--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,11 @@ uuid = "6c71635d-e68b-418f-880a-c8128ca9dc0a"
 authors = ["Michel Verstraete <MMVerstraete@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StringViews = "354b36f9-a18e-4713-926e-db85100087ba"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
 [compat]
 julia = "1.6"
